basic svg shapes

--- a/basicshapes.html
+++ b/basicshapes.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <h1>Basic shapes</h1>
+
+    <!-- MDN: https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Basic_Shapes -->
+
     <!-- Circle -->
     <svg
       width="200"
@@ -17,12 +20,8 @@
     >
       <circle cx="25" cy="75" r="20" stroke="red" fill="red" stroke-width="5" />
     </svg>
-    <!-- 
-    cx = The x-axis coordinate of the center of the circle
-    cy = The y-axis coordinate of the center of the circle
-    r = The radius of the circle. A value lower or equal to zero disables rendering of the circle -->
 
-    <!-- Rectangel -->
+    <!-- Rectangle -->
     <svg
       width="200"
       height="250"
