--- a/basicshapes.html
+++ b/basicshapes.html
@@ -50,6 +50,29 @@
         stroke-width="5"
       />
     </svg>
+
+    <!-- Line -->
+    <svg
+      width="200"
+      height="250"
+      version="1.1"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <line
+        x1="10"
+        x2="50"
+        y1="110"
+        y2="150"
+        stroke="orange"
+        stroke-width="5"
+      />
+      <polyline
+        points="60 110 65 120 70 115 75 130 80 125 85 140 90 135 95 150 100 145"
+        stroke="orange"
+        fill="transparent"
+        stroke-width="5"
+      />
+    </svg>
     <script src="basicshapes.js"></script>
   </body>
 </html>
