--- a/basicshapes.html
+++ b/basicshapes.html
@@ -10,32 +10,20 @@
     <h1>Basic shapes</h1>
 
     <!-- MDN: https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Basic_Shapes -->
-
-    <!-- Circle -->
     <svg
       width="200"
       height="250"
       version="1.1"
       xmlns="http://www.w3.org/2000/svg"
     >
-      <circle cx="25" cy="75" r="20" stroke="red" fill="red" stroke-width="5" />
-    </svg>
-
-    <!-- Rectangle -->
-    <svg
-      width="200"
-      height="250"
-      version="1.1"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <!-- Simple rectangle -->
+      <!-- Rectangle -->
       <rect
         x="10"
         y="10"
         width="30"
         height="30"
         stroke="black"
-        fill="black"
+        fill="transparent"
         stroke-width="5"
       />
       <rect
@@ -46,18 +34,32 @@
         width="30"
         height="30"
         stroke="black"
-        fill="black"
+        fill="transparent"
         stroke-width="5"
       />
-    </svg>
 
-    <!-- Line -->
-    <svg
-      width="200"
-      height="250"
-      version="1.1"
-      xmlns="http://www.w3.org/2000/svg"
-    >
+      <!-- Circle -->
+      <circle
+        cx="25"
+        cy="75"
+        r="20"
+        stroke="red"
+        fill="transparent"
+        stroke-width="5"
+      />
+
+      <!-- Ellipse -->
+      <ellipse
+        cx="75"
+        cy="75"
+        rx="20"
+        ry="5"
+        stroke="red"
+        fill="transparent"
+        stroke-width="5"
+      />
+
+      <!-- Line -->
       <line
         x1="10"
         x2="50"
@@ -66,12 +68,11 @@
         stroke="orange"
         stroke-width="5"
       />
+
+      <!-- Polyline -->
       <polyline
         points="60 110 65 120 70 115 75 130 80 125 85 140 90 135 95 150 100 145"
-        stroke="orange"
-        fill="transparent"
-        stroke-width="5"
-      />
+      ></polyline>
     </svg>
     <script src="basicshapes.js"></script>
   </body>
