basic svg shapes

--- a/basicshapes.html
+++ b/basicshapes.html
@@ -71,9 +71,26 @@
 
       <!-- Polyline -->
       <polyline
-        points="60 110 65 120 70 115 75 130 80 125 85 140 90 135 95 150 100 145"
-      ></polyline>
+        points="10,10,25,75,75,75 10,110,50,150"
+        stroke="navy"
+        fill="transparent"
+        stroke-width="10"
+      />
+
+      <path
+        d="M 10,10 L 25,75 H 75 L 10,110 L 50,150"
+        stroke="pink"
+        fill="transparent"
+        stroke-width="5"
+      />
+
+      <path
+        d="M 10,10 L 25,75 H 75 L 10,110 L 50,150  C 45,90 -30,50 80,55 s -40,90 80,-50 "
+        stroke="lime"
+        fill="transparent"
+        stroke-width="3"
+      />
     </svg>
-    <script src="basicshapes.js"></script>
+    <script src=""></script>
   </body>
 </html>
