--- a/basicshapes.html
+++ b/basicshapes.html
@@ -41,11 +41,16 @@
         <!-- Polyline -->
         <polyline points="10,10,25,75,75,75 10,110,50,150" stroke-width="10" />
         <!-- Path -->
-        <path d="M 10,10 L 25,75 H 75 L 10,110 L 50,150" stroke-width="5" />
+        <path
+          d="M 10,10 L 25,75 H 75 L 10,110 L 50,150"
+          stroke-width="5"
+          stroke="red"
+        />
 
         <!-- Curvey path -->
         <path
-          d="M 10,10 L 25,75 H 75 L 10,110 L 50,150  C 45,90 -30,50 80,55 s -40,90 80,-50 "
+          d="M 10,10 L 25,75 H 75 L 10,110 L 50,150  C 45,90 -30,50 80,55 s -40,90 80,-50"
+          stroke="lime"
           stroke-width="3"
         />
       </g>
