basic svg shapes - styling and drawing

--- a/basicshapes.html
+++ b/basicshapes.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Basic SVG shapes excercise</title>
-    <style>
-      /* Put all my basic shapes in a group and styled alle elements a once by styling group tag instead of attributes*/
-      g {
-        fill: transparent;
-        stroke: blue;
-        stroke-width: 5;
-      }
-    </style>
   </head>
   <body>
     <h1>Basic shapes</h1>
@@ -26,32 +19,35 @@
     >
       <!-- Rectangle -->
       <g>
-        <rect x="10" y="10" width="30" height="30" />
-        <rect x="60" y="10" rx="10" ry="10" width="30" height="30" />
+        <rect x="10" y="10" width="30" height="30" id="rectangle" />
+        <rect
+          x="60"
+          y="10"
+          rx="10"
+          ry="10"
+          width="30"
+          height="30"
+          id="rectangle2"
+        />
 
         <!-- Circle -->
-        <circle cx="25" cy="75" r="20" />
+        <circle cx="25" cy="75" r="20" id="circle" />
 
         <!-- Ellipse -->
-        <ellipse cx="75" cy="75" rx="20" ry="5" stroke-width="5" />
+        <ellipse cx="75" cy="75" rx="20" ry="5" stroke-width="5" id="ellipse" />
 
         <!-- Line -->
-        <line x1="10" x2="50" y1="110" y2="150" />
+        <line x1="10" x2="50" y1="110" y2="150" id="line" />
 
         <!-- Polyline -->
-        <polyline points="10,10,25,75,75,75 10,110,50,150" stroke-width="10" />
+        <polyline points="10,10,25,75,75,75 10,110,50,150" id="polyline" />
         <!-- Path -->
-        <path
-          d="M 10,10 L 25,75 H 75 L 10,110 L 50,150"
-          stroke-width="5"
-          stroke="red"
-        />
+        <path d="M 10,10 L 25,75 H 75 L 10,110 L 50,150" id="path" />
 
         <!-- Curvey path -->
         <path
           d="M 10,10 L 25,75 H 75 L 10,110 L 50,150  C 45,90 -30,50 80,55 s -40,90 80,-50"
-          stroke="lime"
-          stroke-width="3"
+          id="curvey_path"
         />
       </g>
     </svg>
