basic svg shapes

--- a/basicshapes.html
+++ b/basicshapes.html
@@ -57,7 +57,7 @@
         console.log("sidenVises");
         //Adding the pulse animation the round-cornered rectangle
         document.querySelector("#rectangle2").classList.add("pulse");
-        document.querySelector("#circle").classList.add("pulse");
+        document.querySelector("#circle").classList.add("rotation");
       }
     </script>
   </body>
