--- a/cap.html
+++ b/cap.html
@@ -10,6 +10,31 @@
   <body>
     <section></section>
 
+    <svg viewBox="0 0 842 200">
+      <rect class="color_btn" width="100" height="100" fill="red"></rect>
+      <rect
+        class="color_btn"
+        x="110"
+        width="100"
+        height="100"
+        fill="blue"
+      ></rect>
+      <rect
+        class="color_btn"
+        x="220"
+        width="100"
+        height="100"
+        fill="green"
+      ></rect>
+      <rect
+        class="color_btn"
+        x="330"
+        width="100"
+        height="100"
+        fill="yellow"
+      ></rect>
+    </svg>
+
     <script>
       document.addEventListener("DOMContentLoaded", start);
       console.log("DOMContentLoaded");
