trying to make configurator work

--- a/cap.html
+++ b/cap.html
@@ -34,19 +34,6 @@
         fill="yellow"
       ></rect>
     </svg>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", start);
-      console.log("DOMContentLoaded");
-
-      async function start() {
-        let response = await fetch("cap_new_try-01.svg");
-        let mySvgData = await response.text();
-        document.querySelector("section").innerHTML = mySvgData;
-        startManipulatingTheSvg();
-      }
-
-      function startManipulatingTheSvg() {}
-    </script>
+    <script src="cap.js"></script>
   </body>
 </html>
